--- a/android/common/src/main/AndroidManifest.xml
+++ b/android/common/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <uses-library android:name="org.apache.http.legacy" android:required="true" />
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
 
     <uses-permission android:name="android.hardware.location" />
