--- a/plugin.xml
+++ b/plugin.xml
@@ -168,7 +168,7 @@
                   <action android:name="android.intent.action.BOOT_COMPLETED" />
                </intent-filter>
             </receiver>
-            <uses-library android:name="org.apache.http.legacy" android:required="faslse" />
+            <uses-library android:name="org.apache.http.legacy" android:required="false" />
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
